<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="com.hiskysat.udpchat.account.CreateAccountViewModel"
            />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_ip_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="parent"
            app:error="@{viewmodel.ipAddressError != null ? context.getString(viewmodel.ipAddressError) : null}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_ip_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip_address"
                android:text="@{viewmodel.ipAddress}"
                android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_port_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:error="@{viewmodel.portNumberValidator.error != null ? context.getString(viewmodel.portNumberValidator.error) : null}"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/layout_ip_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_port_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/port_number"
                android:inputType="number"
                android:text="@={viewmodel.portNumber}"
                android:enabled="@{!viewmodel.isReadOnly}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:error="@{viewmodel.userNameValidator.error != null ? context.getString(viewmodel.userNameValidator.error) : null}"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/layout_port_number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:text="@={viewmodel.userName}"
                android:enabled="@{!viewmodel.isReadOnly}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:error="@{viewmodel.passwordValidator.error != null ? context.getString(viewmodel.passwordValidator.error) : null}"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/layout_user_name"
            android:visibility="@{viewmodel.isReadOnly ? View.GONE : View.VISIBLE}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewmodel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:error="@{viewmodel.confirmPasswordValidator.error != null ? context.getString(viewmodel.confirmPasswordValidator.error) : null}"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/layout_password"
            android:visibility="@{viewmodel.isReadOnly ? View.GONE : View.VISIBLE}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:text="@={viewmodel.confirmPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create"
            android:enabled="@{viewmodel.isCreateAccountFormValidMediator}"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/layout_confirm_password"
            android:onClick="@{()-> viewmodel.createUserAccount()}"
            android:visibility="@{viewmodel.isReadOnly ? View.GONE : View.VISIBLE}"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/field_barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="layout_password, layout_confirm_password, btn_create_account"
            app:layout_constraintTop_toBottomOf="@id/layout_user_name"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
