<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.text.TextUtils"/>
        <variable
            name="viewmodel"
            type="com.hiskysat.udpchat.addclient.AddClientViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_ip_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toStartOf="@+id/gl_end"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toTopOf="parent"
                app:error="@{viewmodel.addClientError != null || viewmodel.ipAddressValidator.error != null ? context.getString(viewmodel.addClientError != null ? viewmodel.addClientError : viewmodel.ipAddressValidator.error) : null}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_ip_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ip_address"
                    android:text="@={viewmodel.ipAddress}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_port_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:error="@{viewmodel.portNumberValidator.error != null ? context.getString(viewmodel.portNumberValidator.error) : null}"
                app:layout_constraintEnd_toStartOf="@+id/gl_end"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/layout_ip_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/port_number"
                    android:text="@={viewmodel.portNumber}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_client"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_client"
                android:enabled="@{viewmodel.isAddClientFormValidMediator}"
                app:layout_constraintEnd_toStartOf="@+id/gl_end"
                app:layout_constraintStart_toStartOf="@+id/gl_start"
                app:layout_constraintTop_toBottomOf="@+id/layout_port_number"
                android:onClick="@{()-> viewmodel.addClient()}" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
